# dbook

./: .gitignore  =20.0  CLAUDE.md  LICENSE  MANIFEST.in  PLAN.md  README.md  REPORT.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: .gitignore  Makefile  PLAN.md  docker-compose.yml  report.py  requirements.txt  runner.py
benchmarks/agents/: __init__.py  base_agent.py  billing_agent.py  care_agent.py  sales_agent.py
benchmarks/judge/: __init__.py  llm_judge.py  mock_judge.py
benchmarks/scenarios/: __init__.py  base.py  billing.py  care.py  sales.py
benchmarks/schema/: 00_schemas.sql  01_customers.sql  02_catalog.sql  03_orders.sql  04_billing.sql  05_analytics.sql  06_warehouse.sql  07_support.sql
benchmarks/seed/: seed_config.yaml  seed_data.py
docs/: ROADMAP.md  architecture.html
results/: benchmark_report.html  benchmark_results.json
skills/dbook-navigator/: SKILL.md
src/agentlib/: __init__.py
src/dbook/: __init__.py  async_catalog.py  catalog.py  cli.py  compiler.py  domains.py  embeddings.py  graph.py  hasher.py  incremental.py  metrics.py  models.py  serializer.py  tokens.py  validator.py
src/dbook/generators/: checksums.py  concepts.py  lineage.py  manifest.py  metrics.py  navigation.py  table.py
src/dbook/llm/: __init__.py  enricher.py  prompts.py  provider.py
src/dbook/pii/: __init__.py  patterns.py  scanner.py
tests/: amazon_fixture.py  benchmark_helpers.py  conftest.py  test_benchmark_agent_simulation.py  test_benchmark_amazon_correctness.py  test_benchmark_base.py  test_benchmark_comprehensive.py  test_benchmark_correctness.py  test_benchmark_llm_real.py  test_benchmark_realistic.py  test_benchmark_scaled.py  test_e2e_cli.py  test_e2e_compile.py  test_e2e_llm.py  test_e2e_phase1.py  test_e2e_pii.py  test_graph.py  test_serializer.py
